# MIMIC-Papers-Repro-Agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTORS.md  README.md  pyproject.toml
agents/cohort_agent/: AGENTS.md
agents/paper_parser/: AGENTS.md
agents/report_agent/: AGENTS.md
agents/stats_agent/: AGENTS.md
agents/verify_agent/: AGENTS.md
configs/: agentic.example.yaml  lobster.request.agentic-repro.example.json  lobster.request.follow-up.example.json  lobster.request.plan-only.example.json  mimic_variable_semantics.yaml  openclaw.agentic.relaxed-cohort.yaml  openclaw.agentic.yaml  openclaw.mimic-real-run.yaml  openclaw.request.agentic-repro.example.json  openclaw.request.arf-nomogram-agentic.example.json  openclaw.request.follow-up.example.json  openclaw.request.plan-only.example.json  openclaw.request.stroke-tyg-agentic.example.json  openclaw.request.trajectory-plan.example.json  pipeline.example.yaml  pipeline.mimic22.diagnostic.yaml
docs/: agent-detailed-report-and-lobster-integration-2026-03-27.md  agent-detailed-report-and-openclaw-integration-2026-03-27.md  architecture.md  clinical-analysis-capability-map.md  lobster_agent_contract.md  mimic_iv_explanation_integration.md  openclaw_integration.md  report-index.md  s12890-025-04067-0-reproduction-alignment-2026-03-27.md  s12890-025-04067-0-reproduction-report-vs-paper-2026-03-27.md  security_notes.md  skills-catalog.md  skills_map.md  supplemental-codex-skill-map.md
docs/architecture/: agent-code-framework-maintenance-zh-2026-04-14.md  (+4 more)
openclaw/: AGENTS.md  SOUL.MD
scripts/: bootstrap_skills.sh  build_tyg_analysis_dataset.py  build_tyg_sepsis_cohort.py  git_update.sh
tests/: test_binary_outcome_analysis.py  test_llm_config.py  test_openclaw_integration.py  test_paper_materials.py  test_trajectory_profile_stats.py
(+113 files in other folders)
